--- a/app/globals.css
+++ b/app/globals.css
@@ -10,12 +10,25 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-   --breakpoint-xs: 30rem;
+  --breakpoint-xs: 30rem;
 }
-
-
 
 body {
   background: var(--background);
   color: var(--foreground);
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-marquee {
+  display: flex;
+  animation: marquee 20s linear infinite;
+  width: max-content;
 }
